--- a/src/pages/common.css
+++ b/src/pages/common.css
@@ -19,7 +19,7 @@
 
 body * {
   font-size: 16px;
-  color: #222;
+  color: #333;
   line-height: 1;
   font-family: "Noto Sans KR";
   font-weight: 400;
@@ -37,10 +37,51 @@ ul {
 ul li {
   list-style-type: none;
 }
+input {
+  border: 1px solid #ddd;
+  padding-left: 12px;
+  color: #222;
+}
+input::placeholder {
+  color: #666;
+}
+button {
+  background-color: transparent;
+}
 
 .page-title {
   margin-top: 20px;
+  margin-bottom: 0;
   padding-left: 20px;
-  font-size: 20px;
+  padding-right: 20px;
+  font-size: 22px;
   font-weight: 500;
+  line-height: 1.5;
+}
+.sub-title {
+  padding: 0 20px;
+  color: #666;
+  margin-top: 6px;
+}
+
+.primary-btn {
+  background-color: #3addd3;
+  height: 40px;
+  min-width: 60px;
+  border-radius: 8px;
+  color: #fff;
+  font-weight: 500;
+}
+
+ion-tab-button ion-icon {
+  font-size: 20px;
+  color: #999 !important;
+}
+ion-tab-button ion-label {
+  font-size: 14px;
+  color: #999 !important;
+}
+.tab-selected ion-icon,
+.tab-selected ion-label {
+  color: #3addd3 !important;
 }
