--- a/src/pages/common.css
+++ b/src/pages/common.css
@@ -54,7 +54,7 @@ button {
   margin-bottom: 0;
   padding-left: 20px;
   padding-right: 20px;
-  font-size: 22px;
+  font-size: 22x;
   font-weight: 500;
   line-height: 1.5;
 }
