--- a/src/pages/list.css
+++ b/src/pages/list.css
@@ -1,5 +1,5 @@
 .memo-form {
-  padding: 20px 0;
+  padding: 30px 0 20px 0;
   margin: 0 20px;
 }
 .memo-form input {
@@ -14,11 +14,15 @@
   margin: 20px 20px 40px 20px;
 }
 .memo-list li {
+  padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid #ededed;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.memo-list li:first-child {
+  padding-top: 0;
 }
 .memo-list p {
   font-weight: 500;
